package Enums.entitiesEnums;

public enum REQUEST_STATUS {
    PENDING,
    ACCEPTED,
    REJECTED,
    TIMEOUT
}
