package dto;

public record CoordinatesDTO(
        Double latitude,
        Double longitude){
}
