package dto;

public record SearchCabDTO (
        CoordinatesDTO coordinatesDTO
) {
}
